# OntologyGNN

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
data/titanic/: mapping_titanic.json  mapping_titanic_with_individual_cabins_by_side.json  titanic.ttl  titanic_with_cabins.rdf  titanic_with_individual_cabins_by_side.rdf  titanic_with_individual_cabins_by_side.ttl
notebooks/: 1-Build_GONet_graph_part1.ipynb  1-Build_GONet_graph_part2.ipynb  1-Build_GONet_graph_part3.ipynb  Interpretation.ipynb  ontologyCommunityDetection.ipynb  ontologyGNN.ipynb  ontology_custom.ipynb  ontology_custom_dag.ipynb  ontology_custom_dag_interpret.ipynb  requirements.txt
ontologygnn/: __init__.py  __main__.py  gnn_model.py  ontology_dataloader.py  train.py  utils.py
scripts/: GraphGONet.py  base_model.py  ontologyNN.py  ontologyNN_communities.py  ontologyNN_communities_training.py  ontology_dataloader.py  requirements.txt  training.py  utils.py
scripts/titanic_data/: titanic_ontology.json
src/: GNNmodel.py  ontology_dataloader.py  train.py  utils.py
